# setupci

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
setupci/: cli.py
setupci/templates/django/backend/: .env.example  Dockerfile  README.md  requirements.txt
setupci/templates/django/backend/apps/: __init__.py
setupci/templates/django/backend/apps/items/: __init__.py  models.py  serializers.py  urls.py  views.py
setupci/templates/django/backend/config/: settings.py  urls.py
setupci/templates/django/simple/: .gitignore  README.md
setupci/templates/django/simple/config/: settings.py  urls.py
setupci/templates/fastapi/backend/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
setupci/templates/fastapi/backend/app/: main.py
setupci/templates/fastapi/backend/app/api/: router.py
setupci/templates/fastapi/backend/app/api/endpoints/: items.py
setupci/templates/fastapi/backend/app/core/: config.py
setupci/templates/fastapi/backend/app/db/: base.py  session.py
setupci/templates/fastapi/backend/app/models/: __init__.py  item.py
setupci/templates/fastapi/backend/app/schemas/: __init__.py  item.py
setupci/templates/fastapi/simple/: .gitignore  README.md  main.py
setupci/templates/flask/backend/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt  wsgi.py
setupci/templates/flask/backend/app/: __init__.py  config.py
setupci/templates/flask/backend/app/api/: __init__.py  items.py
setupci/templates/flask/backend/app/models/: item.py
setupci/templates/flask/simple/: .gitignore  README.md  app.py
setupci/templates/general/backend/: .gitignore  README.md  pyproject.toml
setupci/templates/general/backend/src/: __init__.py  main.py
setupci/templates/general/backend/tests/: test_main.py
setupci/templates/general/simple/: .gitignore  README.md  main.py
tests/: __init__.py  test_cli.py
