[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setupci"
version = "0.1.1"
description = "A professional Python project bootstrapper CLI supporting multiple frameworks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "syed-mujtaba-stack", email = "abbasmujtaba125@gmail.c" }
]
keywords = ["cli", "project-template", "scaffolding", "fastapi", "flask", "django", "bootstrap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/syed-mujtaba-stack/setupci"
"Repository" = "https://github.com/syed-mujtaba-stack/setupci"
"Bug Tracker" = "https://github.com/syed-mujtaba-stack/setupci/issues"
"PyPI" = "https://pypi.org/project/setupci/"
"Changelog" = "https://github.com/syed-mujtaba-stack/setupci/blob/main/CHANGELOG.md"

[project.scripts]
setupci = "setupci.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["setupci"]

[tool.hatch.build.targets.sdist]
include = [
    "/setupci",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
